= Release notes v.7.9

== Table of Contents