@@ -47,9 +47,7 @@
       "purposeCode": "BKDF",
       "remittanceInformationUnstructured": "Ref. Number TELEKOM-1222",
       "remittanceInformationStructured": {
-        "reference": "Ref Number Merchant",
-        "referenceType": "reference type",
-        "referenceIssuer": "reference issuer"
+        "reference": "Ref Number Merchant"
       }
     }
   ]
