@@ -40,11 +40,7 @@
   "requestedExecutionDate" : "2020-12-12",
   "requestedExecutionTime": "2020-12-12T12:00:00.000Z",
   "purposeCode": "BKDF",
-  "remittanceInformationStructured": {
-    "reference": "Ref Number Merchant",
-    "referenceType": "reference type",
-    "referenceIssuer": "reference issuer"
-  },
+  "remittanceInformationStructured": "Ref Number Merchant",
   "startDate": "2018-12-12",
   "endDate": "2018-12-28",
   "executionRule": "following",
