@@ -40,9 +40,5 @@
   "requestedExecutionDate" : "2020-12-12",
   "requestedExecutionTime": "2020-12-12T12:00:00.000Z",
   "purposeCode": "BKDF",
-  "remittanceInformationStructured": {
-    "reference": "Ref Number Merchant",
-    "referenceType": "reference type",
-    "referenceIssuer": "reference issuer"
-  }
+  "remittanceInformationStructured": "Ref Number Merchant"
 }
